--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -100,6 +100,37 @@ main {
   margin-bottom: 2rem;
 }
 
+.alert-error {
+  color: #721c24;
+  background-color: #f8d7da;
+  border: 1px solid #f5c6cb;
+  border-radius: 4px;
+  padding: 10px;
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.alert-error i {
+  margin-right: 10px;
+}
+
+/* Styling for success messages */
+.alert-success {
+  color: #155724;
+  background-color: #d4edda;
+  border: 1px solid #c3e6cb;
+  border-radius: 4px;
+  padding: 10px;
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.alert-success i {
+  margin-right: 10px;
+}
+
 h1 {
   font-size: 2.2rem;
   color: var(--primary-color);
