--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -50,6 +50,7 @@
 </div>
 
 <!-- Data Sharing Container -->
+ <!-- Remove this later, it should be in the feedback page -->
 <div class="container">
     <h2>Share Data with Coach</h3>
     <p>Enter your email to receive feedback from a coach on your analysis.</p>
