--- a/src/templates/coachDashboard.html
+++ b/src/templates/coachDashboard.html
@@ -29,29 +29,37 @@
             <h1>Coach Dashboard</h1>
             <p>Welcome to the coach dashboard. Here, you can view and manage your members</p>
             
-            <!-- Button to clear the database
+            <!-- Button to clear the database-->
             <form action="{{ url_for('clear_database') }}" method="POST" style="margin-bottom: 20px;">
                 <button type="submit" class="btn btn-danger">Clear Database</button>
-            </form> -->
+            </form> 
             
 
             <!-- Placeholder for members -->
             {% if grouped_sessions %}
                 <div>
                     {% for username, sessions in grouped_sessions.items() %}
-                        <div class="container">
-                            <h3>{{ username }}</h3>
-                            {% for session in sessions %}
-                                <p>Email: {{ session.email }}</p>
-                                <p>Session URL: {{ session.session_url }}</p>
-                                <p>Trial Name: {{ session.trial_name }}</p>
-                            {% endfor %}
-                            <form action="{{ url_for('coach_view_analysis') }}" method="POST">
-                                <button type="submit" class="btn-view">
-                                <i class="fas fa-chart-bar"></i> View Analysis
-                            </button>
-                            </form>
-                        </div>
+                    {% for username, sessions in grouped_sessions.items() %}
+                    <div class="container">
+                        <h3>{{ username }}</h3>
+                        {% for session in sessions %}
+                            <div class="user-session">
+                                <p><strong>Email:</strong> {{ session.email }}</p>
+                                <p><strong>Session URL:</strong> {{ session.session_url }}</p>
+                                <p><strong>Trial Name:</strong> {{ session.trial_name }}</p>
+                                <form action="{{ url_for('coach_view_analysis') }}" method="POST">
+                                    <input type="hidden" name="username" value="{{ username }}">
+                                    <input type="hidden" name="user_email" value="{{ session.email }}">
+                                    <input type="hidden" name="session_url" value="{{ session.session_url }}">
+                                    <input type="hidden" name="trial_name" value="{{ session.trial_name }}">
+                                    <button type="submit" class="btn-view">
+                                        <i class="fas fa-chart-bar"></i> View Analysis
+                                    </button>
+                                </form>
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endfor %}
                     {% endfor %}
                 </div>
             {% else %}
