Improved user interface and removed score for paddle angle

--- a/src/templates/coachFeedback.html
+++ b/src/templates/coachFeedback.html
@@ -251,6 +251,7 @@
                         <div class="feedback-category card">
                             <div class="card-header" data-rating="{{ feedback.paddle_angle.rating|lower }}">
                                 <div class="header-content">
+                                    <h3><i class="fas fa-ruler-combined"></i> Paddle Angle</span></h3>
                                     <span class="rating rating-{{ feedback.paddle_angle.rating|lower }}">{{ feedback.paddle_angle.rating }}</span>
                                 </div>
                             </div>
